# jash

./: Cargo.toml  README.md  rustfmt.toml
src/: args.rs  command_line.rs  env.rs  io.rs  main.rs  process.rs  signal.rs
src/builtin/: builtin.rs  cd.rs  exit.rs  mod.rs  pwd.rs
src/builtin/processes/: jobs.rs  mod.rs  wait.rs
src/builtin/vars/: export.rs  mod.rs  unset.rs
src/env/: mod.rs  system.rs  vars.rs
src/io/: key.rs  mod.rs
src/parser/: lexer.rs  mod.rs  token.rs
