[package]
name = "jash"
version = "0.1.0-alpha"
edition = "2021"
description = "Just a shell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
colored = "2.0.0"
users = "0.11.0"
hostname = "0.3.1"
nix = "0.25.0"
lazy_static = "1.4.0"
